Bug 156777 - SVG: incorrect style in textPath
Summary: SVG: incorrect style in textPath
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-08-15 17:45 UTC by Xisco Faulí
Modified: 2023-08-17 09:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample file (359 bytes, image/svg+xml)
2023-08-15 17:45 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-08-15 17:45:11 UTC
Created attachment 188983 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Text fill should be green. it's black

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dedf098e742550622cec6fdc639550371d9e58cf
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-08-15 19:43:32 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20f57e14362674d321ef184e1987f41a6418adc2

tdf#156777: check for css style in textpath

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-17 09:15:19 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/72b99211cfb3755546b5bfeb13f7693dc95b79c1

tdf#156777: check for css style in textpath

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.