tdf#156777: check for css style in textpath

Change-Id: I63a274dd9fba37852412a194a490cb2b7634f1cb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155726
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 20f57e14362674d321ef184e1987f41a6418adc2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155702
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>